--- a/index.html
+++ b/index.html
@@ -6,28 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="calculator">
         <div class="display-box">
-            <p id="result"></p>
+            <p id="result"><i class="fa-solid fa-caret-left"></i></p>
         </div>
+        <div class="systum">
         <div class="button-row">
             <button class="button" id="clear">C</button>
-            <button class="button" id="backspace">Backspace</button>
+            <button class="button" id="backspace"><i class="fa-solid fa-delete-left"></i></button>
             <button class="button" id="divide">/</button>
+            <button class="button" id="multiply">*</button>
         </div>
         <div class="button-row">
             <button class="button" id="seven">7</button>
             <button class="button" id="eight">8</button>
             <button class="button" id="nine">9</button>
-            <button class="button" id="multiply">*</button>
+            <button class="button" id="subtract">-</button>   
         </div>
-        <div class="button-row">
+        <div class="button-row456">
             <button class="button" id="four">4</button>
             <button class="button" id="five">5</button>
             <button class="button" id="six">6</button>
-            <button class="button" id="subtract">-</button>
         </div>
         <div class="button-row">
             <button class="button" id="one">1</button>
@@ -39,6 +41,7 @@
             <button class="button" id="zero">0</button>
             <button class="button" id="decimal">.</button>
             <button class="button" id="equals">=</button>
+        </div>
         </div>
     </div>
 </body>
