--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="calculator">
         <div class="display-box">
-            <p id="result"><i class="fa-solid fa-caret-left"></i></p>
+            <input id="result"></input>
         </div>
         <div class="systum">
         <div class="button-row">
