--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
         <div class="systum">
         <div class="button-row">
-            <button class="button" id="clear">C</button>
-            <button class="button" id="backspace"><i class="fa-solid fa-delete-left"></i></button>
+            <button class="button" id="clear">AC</button>
+            <button class="button" id="backspace">DL</button>
             <button class="button" id="divide">/</button>
             <button class="button" id="multiply">*</button>
         </div>
